--- a/_posts/2016-8-22-ipsum.md
+++ b/_posts/2016-8-22-ipsum.md
@@ -3,6 +3,7 @@ layout: post
 title: Ipsum
 description: Nisl sed aliquam
 image: assets/images/pic04.jpg
+excerpt: Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat.
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
