--- a/_posts/2016-8-24-tempus.md
+++ b/_posts/2016-8-24-tempus.md
@@ -3,6 +3,7 @@ layout: post
 title: Tempus
 description: Feugiat amet tempus
 image: assets/images/pic02.jpg
+excerpt: Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
