--- a/_posts/2016-8-25-aliquam.md
+++ b/_posts/2016-8-25-aliquam.md
@@ -3,6 +3,7 @@ layout: post
 title: Aliquam
 description: Ipsum dolor sit amet
 image: assets/images/pic01.jpg
+excerpt: Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
